add quince and update introduction

--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
 <body>
   <div>
     <div id="header">
-      <div id="name-div"><a href="index.html" id="name">Andrew Zhen</a></div>
+      <div id="name-div"><a href="https://ajzhen.com" id="name">Andrew Zhen</a></div>
 
       <div id="nav-div">
-        <div class="nav"><a href="about.html" id="about">About</a></div>
+        <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
         <div class="nav"><a href="http://ajzhen-photo.herokuapp.com" id="photo">Photography</a></div>
         <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
@@ -37,7 +37,7 @@
         <br><br>
         <p class="aboutHeader">Experience</p>
         <p> Previously, I’ve had the opportunities to work as a 
-        frontend developer at CAIDA and then as a data scientist at AlphaCore Capital LLC before that.</p>
+        UX developer at CAIDA and then as a data scientist at AlphaCore Capital LLC before that.</p>
         <br><br>
         <p class="aboutHeader">Interests</p>
         <p> I spend my time burning food calories through basketball, enjoying a 
