--- a/index.html
+++ b/index.html
@@ -19,46 +19,50 @@
 <body>
   <div>
     <div id="header">
-      <div id="name-div"><a href="#" id="name">Andrew Zhen</a></div>
+      <div id="name-div"><a href="https://ajzhen.com" id="name">Andrew Zhen</a></div>
 
       <div id="nav-div">
-        <div class="nav"><a href="about.html" id="about">About</a></div>
+        <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
         <div class="nav"><a href="http://ajzhen-photo.herokuapp.com" id="photo">Photography</a></div>
         <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
             <input type="checkbox">
             <span class="slider round"></span>
           </label>
+          <span>Coming Soon!</span>
         </div>
       </div>
     </div>
     <br>
-    <div>
+    <div id="landing-div">
       <p id="description">
-        I’m an interaction designer and developer with a passion in making
-        experiences more complete using the design process.
+        User Experience Engineer + Designer<br/>
       </p>
     </div>
 
-    <i>Note: Project pages are a work in progress</i><br><br>
+    <div class="wip">Thank you for your patience while the work pages are being worked on </div><br><br>
     <div class="grid-container">
-      <div class="grid-item grid-left"><img src="assets/zilter.png">
-        <p id="title">Zilter Shopping Experience</p>
-        <p id="summary">Website idea with built-in research for shopping convenience</p>
+      <div class="grid-item grid-left"><img src="assets/quince.jpg">
+        <p id="title">UC San Diego CAIDA Intern</p>
+        <p id="summary">UX Developer at <br/>The Center for Applied Internet Data Analysis</p>
       </div>
-      <div class="grid-item grid-middle"><img src="assets/snaash.png">
+      <div class="grid-item grid-middle"><img src="assets/zilter.png">
+        <p id="title">Zilter</p>
+        <p id="summary">Web application with built-in research for shopping convenience</p>
+      </div>
+      <div class="grid-item grid-right"><img src="assets/snaash.png">
         <p id="title">SNAASH</p>
         <p id="summary">Advice-giving platform, powered by elders</p>
       </div>
-      <div class="grid-item grid-right"><img src="assets/rocket.gif">
+      <div class="grid-item grid-left"><img src="assets/rocket.gif">
         <p id="title">Rocket Countdown</p>
         <p id="summary">Animated rocket and color-changing background for those with deadlines</p>
       </div>
-      <div class="grid-item grid-left"><img src="assets/quickly.png">
-        <p id="title">Quickly Web Application</p>
-        <p id="summary">Class-scheduling tool for UCSD students with punctual intent</p>
+      <div class="grid-item grid-middle"><img src="assets/quickly.png">
+        <p id="title">Quickly</p>
+        <p id="summary">Class-scheduling web application for UCSD students with punctual intent</p>
       </div>
-      <div class="grid-item grid-middle"><img src="assets/mymoney.png">
+      <div class="grid-item grid-right"><img src="assets/mymoney.png">
         <p id="title">Finance Tracker</p>
         <p id="summary">Simple, yet effective bash program for finance keeping</p>
       </div>
