--- a/about.html
+++ b/about.html
@@ -15,12 +15,13 @@
 
       <div id="nav-div">
         <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
-        <div class="nav"><a href="http://ajzhen-photo.herokuapp.com" id="photo">Photography</a></div>
+        <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
         <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
             <input type="checkbox">
             <span class="slider round"></span>
           </label>
+          <span>Coming Soon!</span>
         </div>
       </div>
     </div>
