--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <div id="nav-div">
         <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
-        <div class="nav"><a href="http://ajzhen-photo.herokuapp.com" id="photo">Photography</a></div>
+        <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
         <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
             <input type="checkbox">
