update thumbnail and fadein elements

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <title>Andrew Zhen</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
   <link rel="stylesheet" type="text/css" href="style.css">
+
+  <script src="jquery.js"></script>
+  <script src="fadein.js"></script>
 </head>
 
 <body>
@@ -40,34 +43,37 @@
       </p>
     </div>
 
+    <section>
     <div class="wip">Thank you for your patience while the work pages are being worked on </div><br><br>
     <div class="grid-container">
       <div class="grid-item grid-left"><img src="assets/quince.jpg">
         <p id="title">UC San Diego CAIDA Intern</p>
         <p id="summary">UX Developer at <br/>The Center for Applied Internet Data Analysis</p>
       </div>
-      <div class="grid-item grid-middle"><img src="assets/zilter.png">
+      <div class="grid-item grid-middle"><img src="assets/zilter.jpg">
         <p id="title">Zilter</p>
         <p id="summary">Web application with built-in research for shopping convenience</p>
       </div>
-      <div class="grid-item grid-right"><img src="assets/snaash.png">
+      <div class="grid-item grid-right"><img src="assets/snaash/snaash.png">
         <p id="title">SNAASH</p>
         <p id="summary">Advice-giving platform, powered by elders</p>
       </div>
-      <div class="grid-item grid-left"><img src="assets/rocket.gif">
-        <p id="title">Rocket Countdown</p>
-        <p id="summary">Animated rocket and color-changing background for those with deadlines</p>
-      </div>
-      <div class="grid-item grid-middle"><img src="assets/quickly.png">
+      <div class="grid-item grid-left"><img src="assets/quickly.png">
         <p id="title">Quickly</p>
         <p id="summary">Class-scheduling web application for UCSD students with punctual intent</p>
       </div>
-      <div class="grid-item grid-right"><img src="assets/mymoney.png">
+      <div class="grid-item grid-middle"><img src="assets/mymoney.png">
         <p id="title">Finance Tracker</p>
         <p id="summary">Simple, yet effective bash program for finance keeping</p>
       </div>
+      <div class="grid-item grid-right"><img src="assets/rocket.gif">
+        <p id="title">Long Term</p>
+        <p id="summary">Collection of personal projects</p>
+      </div>
     </div>
+    </section>
 
+    <section>
     <div id="contact">
       <ul>
         <li><a href="mailto:andrewjzhen@gmail.com">Email</a></li>
@@ -77,6 +83,7 @@
         <li><a href="https://www.instagram.com/a.jzhen/">Instagram</a></li>
       </ul>
     </div>
+    </section>
 
     <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
   </div>
