remove darkmode for now and update nav bar

--- a/about.html
+++ b/about.html
@@ -4,25 +4,25 @@
   <script>
     gtag('config', 'UA-102146073-1');
   </script>
-  <title>Andrew Zhen</title>
+  <title>Andrew Zhen | About</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
-  <link rel="stylesheet" type="text/css" href="aboutStyle.css">
+  <link rel="stylesheet" type="text/css" href="style/aboutStyle.css">
+  <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
 <body>
   <div>
     <div id="header">
-      <div id="name-div"><a href="https://ajzhen.com" id="name">Andrew Zhen</a></div>
+      <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
 
       <div id="nav-div">
         <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
         <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
-        <div id="darkmode" class="nav">Dark Mode
+        <!-- <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
             <input type="checkbox">
             <span class="slider round"></span>
           </label>
-          <span>Coming Soon!</span>
-        </div>
+        </div> -->
       </div>
     </div>
     
