--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <title>Andrew Zhen</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
+  <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 
   <script src="jquery.js"></script>
   <script src="fadein.js"></script>
@@ -27,13 +28,12 @@
       <div id="nav-div">
         <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
         <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
-        <div id="darkmode" class="nav">Dark Mode
+        <!-- <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
             <input type="checkbox">
             <span class="slider round"></span>
           </label>
-          <span>Coming Soon!</span>
-        </div>
+        </div> -->
       </div>
     </div>
     <br>
@@ -44,11 +44,15 @@
     </div>
 
     <section>
-    <div class="wip">Thank you for your patience while the work pages are being worked on </div><br><br>
+    <div class="wip">Thank you for your patience while the work pages are being developed</div><br><br>
     <div class="grid-container">
-      <div class="grid-item grid-left"><img src="assets/quince.jpg">
-        <p id="title">UC San Diego CAIDA Intern</p>
-        <p id="summary">UX Developer at <br/>The Center for Applied Internet Data Analysis</p>
+      <div class="grid-item grid-left">
+        <!-- <a href="https://ajzhen.com/caida"> -->
+        <!-- <a href="caida.html"> -->
+          <img src="assets/caida/quince.jpg">
+        <!-- </a> -->
+        <p id="title">CAIDA Internship</p>
+        <p id="summary">UX Developer at The Center for Applied Internet Data Analysis at UC San Diego</p>
       </div>
       <div class="grid-item grid-middle"><img src="assets/zilter.jpg">
         <p id="title">Zilter</p>
@@ -73,7 +77,6 @@
     </div>
     </section>
 
-    <section>
     <div id="contact">
       <ul>
         <li><a href="mailto:andrewjzhen@gmail.com">Email</a></li>
@@ -83,7 +86,6 @@
         <li><a href="https://www.instagram.com/a.jzhen/">Instagram</a></li>
       </ul>
     </div>
-    </section>
 
     <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
   </div>
