--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <div class="grid-container">
       <div class="grid-item grid-left">
         <!-- <a href="https://ajzhen.com/caida"> -->
-        <!-- <a href="caida.html"> -->
+        <a href="caida.html">
           <img src="assets/caida/quince.jpg">
-        <!-- </a> -->
+        </a>
         <p id="title">CAIDA Internship</p>
         <p id="summary">UX Developer at The Center for Applied Internet Data Analysis at UC San Diego</p>
       </div>
