--- a/caida.html
+++ b/caida.html
@@ -20,25 +20,140 @@
         <!-- <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
             <input type="checkbox">
-            <span class="slider round"></span>
+            <p class="slider round"></p>
           </label>
         </div> -->
       </div>
     </div>
 
     <div class="work-title">CAIDA Internship</div>
-    <div class="work-details grid">
-      <div class="work-detail-line"><span>Date</span><span>July 2018</span></div>
-      <div class="work-detail-line"><span>Duration</span><span>3 months</span></div>
-      <div class="work-detail-line"><span>Role</span><span>UX Developer</span></div>
-      <div class="work-detail-line"><span>Teammate</span><span>Jennifer Chan</span></div>
-      <div class="work-detail-line"><span>Supervisor</span><span>Ricky Mok</span></div>
-
-      <div class="work-logo"><img src="assets/caida/caida.png"></div>
-      <p>Center for Applied Internet Data Analysis</p>
+    <div class="heading-container">
+      <div class="grid">
+        <div class="work-header"><p>Date</p></div>
+        <div class="work-header"><p>Duration</p></div>
+        <div class="work-header"><p>Role</p></div>
+        <div class="work-header"><p>Teammate</p></div>
+        <div class="work-header"><p>Supervisor</p></div>
+      </div>
+      <div class="grid">
+        <p>July 2018</p>
+        <p>3 months</p>
+        <p>UX Developer</p>
+        <p>Jennifer Chan</p>
+        <p>Ricky Mok</p>
+      </div>
+      <div class="work-logo grid"><img src="assets/caida/caida.png"><p>Center for Applied Internet Data Analysis</p></div>
     </div>
 
-    <div class="tools-skills"></div>
+    <div class="body-container">
+      <div class="grid"><div class="work-header"><p>Tools + Skills</p></div></div>
+      <div class="grid">
+        <p>HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git.</p>
+        <p>Web Application Development, User Interface, Front-End Design.</p>
+      </div>
+    </div>
+
+    <div class="body-container">
+      <div class="grid"><div class="work-header"><p>Description</p></div></div>
+      <div class="grid">
+        <p>For the Summer of 2018, I served as a UX Developer for a web 
+           platform called QUINCE, an abbreviation for the lengthy title: Quality 
+           of Internet Consumer Experience. This platform enables end-users to 
+           easily participate in various internet measurement tasks. Participants can,
+           in turn, accumulate virtual points and redeem them for rewards in the form
+           of currency.</p>
+      </div>
+    </div>
+
+    <div class="body-container">
+      <div class="grid"><div class="work-header"><p>Responsibility</p></div></div>
+      <div class="grid">
+        <p>Under the supervision of Ricky, I helped design and develop the web 
+           platform to increase participant engagement. Naturally, I spent some
+           time researching effective ways to gamify measurement tasks so that 
+           they would appeal more to paricipants. As for the visual side, I 
+           worked directly to improve the layout of pages, enhance visualizations 
+           by trying out various icons and images, and implement interactive 
+           elements. I also had to repair visual bugs and design breakdowns for
+           the existing platform. And last but not least, I was tasked with 
+           visualizing the participants’ measurement results.</p>
+      </div>
+    </div>
+
+    <div class="impact-right-container">
+      <div class="grid"><div class="work-header"><p>Impact</p></div></div>
+      <div class="grid"><img src="assets/caida/quince1.jpg"></div>
+      <div class="grid right-caption">
+        <p>The consent form is the first thing participants see when accessing 
+           the web platform. The form was expanded vertically to cover a larger
+           area of the screen than before and a shadow was placed at the bottom
+           of the form to indicate that there is scroll functionality. At a 
+           glance, the consent form is an organized, interactive element that 
+           informs participants.</p>
+      </div>
+    </div>
+
+    <div class="impact-left-container">
+        <div class="grid"></div>
+        <div class="grid left-caption">
+          <p>The tutorial modal window introduces participants to the interface 
+             and what their jobs are. Originally, the window was much larger to 
+             accomodate a bulkier logo and the oversized font. The redesign 
+             lessened font size and inserted helpful paragraph spacing. The logo 
+             was replaced by a more appropriate sized one and the Continue button 
+             was adjusted to sit flush with the edges of the modal window.</p>
+        </div>
+        <div class="grid"><img src="assets/caida/quince2.jpg"></div>
+    </div>
+
+    <div class="impact-right-container">
+      <div class="grid"></div>
+      <div class="grid"><img src="assets/caida/quince3.jpg"></div>
+      <div class="grid right-caption">
+        <p>I designed and implemented the onboarding process that includes the 
+           sign-in, sign-up, and forgot password screens. I also conceptualized 
+           this design with the other modal windows in mind. I chose a deep 
+           green to symbolize the currency that participants may earn through 
+           the web platform. Lastly, I employed adequate negative spacing and contrast.</p>
+      </div>
+    </div>
+
+    <div class="impact-left-container">
+      <div class="grid"></div>
+      <div class="grid left-caption">
+        <p>In order to implement a subtle yet immersive, interactive US map, I 
+           dug into amCharts, a JavaScript charting and mapping library, to 
+           tweak changes within the code. The result is a seamless experience 
+           between interacting with the map and visualizing geographical 
+           locations. Notice, there is also a home button for those who get 
+           carried away.</p>
+      </div>
+      <div class="grid"><img src="assets/caida/quince4.png"></div>
+    </div>
+
+    <div class="conclusion-container">
+      <div class="grid"><div class="work-header"><p>Conclusion + <br/> Key Takeaways</p></div></div>
+      <div class="grid">
+        <p>Starting off at the internship was a little rough: I had to become 
+          familiar with Meteor, get certain dependencies installed on my 
+          computer, join services for communication with the team, attain 
+          access for special privileges, etc. <br/> <br/>
+
+          However, good things take time and effort. And so, not suprisingly, 
+          progressing through the project and absorbing knowledge from everyone 
+          made it all worth the hassle. Working closely with researchers in 
+          CAIDA and getting valuable experience working with the collected 
+          datasets was a privilege. Working in teams definitely helped advance 
+          my design and interpersonal skills because there always exists the 
+          opportunity to receive feedback on your high-fidelity work or mere 
+          conceptual ideas. <br/> <br/>
+
+          Thank you to Ricky for the mentorship and guidance and to Jennifer 
+          for the awesome collaboration.</p>
+      </div>
+    </div>
+
+    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
   </div>
 </body>
 </html>
