add long term page

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <div class="wip">Thank you for your patience while the work pages are being developed</div><br><br>
     <div class="grid-container">
       <div class="grid-item grid-left">
-        <!-- <a href="https://ajzhen.com/caida"> -->
-        <a href="caida.html">
+        <a href="https://ajzhen.com/caida">
           <img src="assets/caida/quince.jpg">
         </a>
         <p id="title">CAIDA Internship</p>
@@ -70,7 +69,10 @@
         <p id="title">Finance Tracker</p>
         <p id="summary">Simple, yet effective bash program for finance keeping</p>
       </div>
-      <div class="grid-item grid-right"><img src="assets/rocket.gif">
+      <div class="grid-item grid-right">
+        <a href="long-term.html">
+          <img src="assets/rocket.gif">
+        </a>
         <p id="title">Long Term</p>
         <p id="summary">Collection of personal projects</p>
       </div>
