redo landing page

--- a/caida.html
+++ b/caida.html
@@ -4,13 +4,13 @@
   <script>
     gtag('config', 'UA-102146073-1');
   </script>
-  <title>Andrew Zhen | CAIDA Internship</title>
+  <title>UX Developer Internship</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
 <body>
-  <div>
+  <div class="content-margins">
     <div id="header">
       <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
 
@@ -80,10 +80,9 @@
       </div>
     </div>
 
-    <div class="impact-right-container">
+    <div class="impact-container">
       <div class="grid"><div class="work-header"><p>Impact</p></div></div>
-      <div class="grid"><img src="assets/caida/quince1.jpg"></div>
-      <div class="grid right-caption">
+      <div class="grid caption">
         <p>The consent form is the first thing participants see when accessing 
            the web platform. The form was expanded vertically to cover a larger
            area of the screen than before and a shadow was placed at the bottom
@@ -91,11 +90,12 @@
            glance, the consent form is an organized, interactive element that 
            informs participants.</p>
       </div>
+      <div class="grid"><img src="assets/caida/quince1.jpg"></div>
     </div>
 
-    <div class="impact-left-container">
+    <div class="impact-container">
         <div class="grid"></div>
-        <div class="grid left-caption">
+        <div class="grid caption">
           <p>The tutorial modal window introduces participants to the interface 
              and what their jobs are. Originally, the window was much larger to 
              accomodate a bulkier logo and the oversized font. The redesign 
@@ -106,21 +106,21 @@
         <div class="grid"><img src="assets/caida/quince2.jpg"></div>
     </div>
 
-    <div class="impact-right-container">
+    <div class="impact-container">
       <div class="grid"></div>
-      <div class="grid"><img src="assets/caida/quince3.jpg"></div>
-      <div class="grid right-caption">
+      <div class="grid caption">
         <p>I designed and implemented the onboarding process that includes the 
            sign-in, sign-up, and forgot password screens. I also conceptualized 
            this design with the other modal windows in mind. I chose a deep 
            green to symbolize the currency that participants may earn through 
            the web platform. Lastly, I employed adequate negative spacing and contrast.</p>
       </div>
+      <div class="grid"><img src="assets/caida/quince3.jpg"></div>
     </div>
 
-    <div class="impact-left-container">
+    <div class="impact-container">
       <div class="grid"></div>
-      <div class="grid left-caption">
+      <div class="grid caption">
         <p>In order to implement a subtle yet immersive, interactive US map, I 
            dug into amCharts, a JavaScript charting and mapping library, to 
            tweak changes within the code. The result is a seamless experience 
