--- a/index.html
+++ b/index.html
@@ -21,55 +21,57 @@
 </head>
 
 <body>
-  <div>
-    <div id="header">
-      <div id="name-div"><a href="https://ajzhen.com" id="name">Andrew Zhen</a></div>
+  <div id="light-bg">
+    <div class="content-margins">
+      <div id="header">
+        <div id="name-div"><a href="https://ajzhen.com" id="name">Andrew Zhen</a></div>
 
-      <div id="nav-div">
-        <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
-        <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
-        <!-- <div id="darkmode" class="nav">Dark Mode
-          <label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-          </label>
-        </div> -->
+        <div id="nav-div">
+          <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
+          <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
+          <!-- <div id="darkmode" class="nav">Dark Mode
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+          </div> -->
+        </div>
       </div>
-    </div>
-    <br>
-    <div id="landing-div">
-      <p id="description">
-        User Experience Engineer + Designer<br/>
-      </p>
-    </div>
+      
+      <p id="description" class="hvr-bob">UX Engineer + Designer<br/></p>
 
+      <p id="home-location">Mt Woodson Summit, San Diego</p>
+    </div>
+  </div>
+
+  <div class="content">
     <section>
     <div class="wip">Thank you for your patience while the work pages are being developed</div><br><br>
     <div class="grid-container">
-      <div class="grid-item grid-left">
+      <div class="grid-item">
         <a href="https://ajzhen.com/caida">
           <img src="assets/caida/quince.jpg">
         </a>
-        <p id="title">CAIDA Internship</p>
-        <p id="summary">UX Developer at The Center for Applied Internet Data Analysis at UC San Diego</p>
+        <p id="title">UX Developer Internship</p>
+        <p id="summary">Summer-long experience at The Center for Applied Internet Data Analysis</p>
       </div>
-      <div class="grid-item grid-middle"><img src="assets/zilter.jpg">
-        <p id="title">Zilter</p>
-        <p id="summary">Web application with built-in research for shopping convenience</p>
+      <div class="grid-item grid-item-right"><img src="assets/snaash/snaash.png">
+        <p id="title">Snaash iOS App</p>
+        <p id="summary">Advice-giving platform, powered by the wisdom of elders</p>
       </div>
-      <div class="grid-item grid-right"><img src="assets/snaash/snaash.png">
-        <p id="title">SNAASH</p>
-        <p id="summary">Advice-giving platform, powered by elders</p>
+      <div class="grid-item not-ready"><img src="assets/zilter.jpg">
+        <p id="title">Zilter Web App</p>
+        <p id="summary">Website concept with built-in research done conveniently for you</p>
       </div>
-      <div class="grid-item grid-left"><img src="assets/quickly.png">
-        <p id="title">Quickly</p>
-        <p id="summary">Class-scheduling web application for UCSD students with punctual intent</p>
+      <div class="grid-item grid-item-right not-ready"><img src="assets/quickly.png">
+        <p id="title">Quickly Web App</p>
+        <p id="summary">Class-scheduling tool for UCSD students with punctual intent</p>
       </div>
-      <div class="grid-item grid-middle"><img src="assets/mymoney.png">
-        <p id="title">Finance Tracker</p>
-        <p id="summary">Simple, yet effective bash program for finance keeping</p>
+      <div class="grid-item not-ready"><img src="assets/mymoney.png">
+        <p id="title">Finance Python Applet</p>
+        <p id="summary">Simple, yet visually effective finance tracker</p>
       </div>
-      <div class="grid-item grid-right">
+      <div class="grid-item grid-item-right">
         <a href="long-term.html">
           <img src="assets/rocket.gif">
         </a>
