--- a/long-term.html
+++ b/long-term.html
@@ -4,13 +4,13 @@
   <script>
     gtag('config', 'UA-102146073-1');
   </script>
-  <title>Andrew Zhen | Long Term</title>
+  <title>Long Term</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
-  <link rel="stylesheet" type="text/css" href="style/workStyle.css">
+  <link rel="stylesheet" type="text/css" href="style/longTermStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
 <body>
-  <div>
+  <div class="content-margins">
     <div id="header">
       <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
 
@@ -26,13 +26,16 @@
       </div>
     </div>
 
-    <div class="work-title">Long Term</div>
+    <div class="work-banner">
+        <span class="work-title">Long Term</span>
+    </div>
 
-    <div class="big-title">Rocket Countdown</div>
     <div class="body-container">
       <div class="grid">
-        <div class="work-header">
-          <p class="no-bold line-height-160">December 2018<br/><br/>
+        <div class="project-info">
+          <p class="project-header">Rocket Countdown</p>
+          <p class="line-height-160">
+             <span class="project-date">December 2018</span><br/><br/>
              HTML <br/>
              CSS <br/>
              JavaScript <br/>
@@ -44,11 +47,12 @@
       <div class="grid"><img src="assets/long-term/rocket.gif"></div>
     </div>
 
-    <div class="big-title">Smile</div>
     <div class="body-container">
       <div class="grid">
-        <div class="work-header">
-          <p class="no-bold line-height-160">March 2019 <br/><br/>
+        <div class="project-info">
+          <p class="project-header">Smile</p>
+          <p class="line-height-160">
+             <span class="project-date">March 2019</span><br/><br/>
              HTML <br/>
              CSS <br/>
              Adobe Illustrator <br/><br/>
