--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
   <script>
     gtag('config', 'UA-102146073-1');
   </script>
-  <title>Andrew Zhen | About</title>
+  <title>About</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
   <link rel="stylesheet" type="text/css" href="style/aboutStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
 <body>
-  <div>
+  <div class="content-margins">
     <div id="header">
       <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
 
@@ -25,11 +25,9 @@
         </div> -->
       </div>
     </div>
-    
-    <br>
 
-    <div class="grid-container">
-      <div class="aboutPic"><img src="assets/self.jpeg" width="90%"></div>
+    <div class="aboutWidth">
+      <div class="aboutPic"><img src="assets/self.jpeg"></div>
 
       <div class="aboutArea">
         <p class="aboutHeader">Biography</p>
@@ -46,7 +44,7 @@
       </div>
     </div>
 
-    <div id="contact" class="aboutContact">
+    <div id="contact">
       <ul>
         <li><a href="mailto:andrewjzhen@gmail.com">Email</a></li>
         <li><a href="assets/resume.pdf">Résumé</a></li>
@@ -56,7 +54,7 @@
       </ul>
     </div>
 
-    <div id="footer" class="aboutCopyright"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
+    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
 
   <script src="script.js" type="text/javascript"></script>
 </body>
