--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
   <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
+  <link rel="prefetch" href="assets/light-bg.jpg">
 
   <script src="jquery.js"></script>
   <script src="fadein.js"></script>
@@ -38,7 +39,8 @@
         </div>
       </div>
       
-      <p id="description" class="hvr-bob">UX Engineer + Designer<br/></p>
+      <p id="description" class="hvr-bob">UX Engineer + Designer</p>
+      <p id="description-2" class="hvr-bob">Currently a Design + Interaction Student at UC San Diego</p>
 
       <p id="home-location">Mt Woodson Summit, San Diego</p>
     </div>
