--- a/caida.html
+++ b/caida.html
@@ -26,30 +26,34 @@
       </div>
     </div>
 
-    <div class="work-title">CAIDA Internship</div>
-    <div class="heading-container">
-      <div class="grid">
-        <div class="work-header"><p>Date</p></div>
-        <div class="work-header"><p>Duration</p></div>
-        <div class="work-header"><p>Role</p></div>
-        <div class="work-header"><p>Teammate</p></div>
-        <div class="work-header"><p>Supervisor</p></div>
+    <div id="caida-banner">
+      <div id="valign-div">
+        <div class="heading-container">
+          <div>
+            <p class="work-title">UX Developer Internship</p>
+            <div class="inline-div" style="padding-right: 4.5vw">
+              <p class="work-header">Date</p>
+              <p class="work-header">Duration</p>
+              <p class="work-header">Teammate</p>
+              <p class="work-header">Supervisor</p>
+            </div>
+            <div class="inline-div">
+              <p class="work-value">July 2018</p>
+              <p class="work-value">3 Months</p>
+              <p class="work-value">J. Chan</p>
+              <p class="work-value">R. Mok</p>
+             </div>
+          </div> 
+          <div class="work-logo"><img src="assets/caida/caida.png"><p>Center for Applied Internet Data Analysis</p></div>
+        </div>
       </div>
-      <div class="grid">
-        <p>July 2018</p>
-        <p>3 months</p>
-        <p>UX Developer</p>
-        <p>Jennifer Chan</p>
-        <p>Ricky Mok</p>
-      </div>
-      <div class="work-logo grid"><img src="assets/caida/caida.png"><p>Center for Applied Internet Data Analysis</p></div>
     </div>
 
     <div class="body-container">
       <div class="grid"><div class="work-header"><p>Tools + Skills</p></div></div>
       <div class="grid">
-        <p>HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git.</p>
-        <p>Web Application Development, User Interface, Front-End Design.</p>
+        <p>— HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git</p>
+        <p>— Web Application Development, User Interface, Front-End Design</p>
       </div>
     </div>
 
@@ -81,7 +85,7 @@
     </div>
 
     <div class="impact-container">
-      <div class="grid"><div class="work-header"><p>Impact</p></div></div>
+      <div class="grid"></div>
       <div class="grid caption">
         <p>The consent form is the first thing participants see when accessing 
            the web platform. The form was expanded vertically to cover a larger
