add snaash page

--- a/caida.html
+++ b/caida.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div id="caida-banner">
+    <div id="caida-banner" class="banner">
       <div id="valign-div">
         <div class="heading-container">
           <div>
