--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         <p id="title">UX Developer Internship</p>
         <p id="summary">Summer-long experience at The Center for Applied Internet Data Analysis</p>
       </div>
-      <div class="grid-item grid-item-right"><img src="assets/snaash/snaash.png">
+      <div class="grid-item grid-item-right">
+        <a href="https://ajzhen.com/snaash">
+          <img src="assets/snaash/thumbnail.png">
+        </a>
         <p id="title">Snaash iOS App</p>
         <p id="summary">Advice-giving platform, powered by the wisdom of elders</p>
       </div>
