--- a/about.html
+++ b/about.html
@@ -1,56 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102146073-1"></script>
   <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
     gtag('config', 'UA-102146073-1');
   </script>
+
   <title>About</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
   <link rel="stylesheet" type="text/css" href="style/aboutStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
-<body>
+<body id="body">
   <div class="content-margins">
     <div id="header">
-      <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
+      <!-- <div id="home-div"><a href="https://ajzhen.com" id="home" onmouseover="mo('home')" onmouseleave="ml('home')">Home</a></div> -->
+      <div id="home-div"><a href="index.html" id="home" onmouseover="mo('home')" onmouseleave="ml('home')" onclick="stilldark()">Home</a></div>
 
       <div id="nav-div">
-        <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
-        <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
-        <!-- <div id="darkmode" class="nav">Dark Mode
+        <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
+        <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
+        
+        <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
-            <input type="checkbox">
+            <input type="checkbox" onchange="darkmode()">
             <span class="slider round"></span>
           </label>
-        </div> -->
+        </div>
+
       </div>
     </div>
 
-    <div class="aboutWidth">
-      <div class="aboutPic"><img src="assets/self.jpeg"></div>
+    <div>
+      <div class="aboutPic"><img src="assets/portrait.png"></div>
 
       <div class="aboutArea">
-        <p class="aboutHeader">Biography</p>
-        <p> Hey! I’m a third year studying design + interaction at UC San 
-        Diego and I’m currently looking for positions in these fields.</p>
-        <br><br>
-        <p class="aboutHeader">Experience</p>
-        <p> Previously, I’ve had the opportunities to work as a 
-        UX developer at CAIDA and then as a data scientist at AlphaCore Capital LLC before that.</p>
-        <br><br>
-        <p class="aboutHeader">Interests</p>
-        <p> I spend my time burning food calories through basketball, enjoying a 
-        thoughtful thriller film, and secretly browsing cat videos on Instagram.</p>
+        <div>
+          <p class="aboutHeader">Biography</p>
+          <p> Hey! I’m a third year studying design + interaction at UC San 
+          Diego and I’m currently looking for positions in these fields.</p>
+          <br><br>
+          <p class="aboutHeader">Experience</p>
+          <p> Previously, I’ve had the opportunities to work as a 
+          UX developer at CAIDA and then as a data scientist at AlphaCore Capital LLC before that.</p>
+          <br><br>
+          <p class="aboutHeader">Interests</p>
+          <p> I spend my time burning food calories through basketball, enjoying a 
+          thoughtful film, and secretly browsing cat videos on Instagram.</p>
+        </div>
+        <div></div>
+        <div class="movie">
+          <p class="aboutHeader">Last Film Watched</p>
+          <img src="assets/lastmoviewatched.jpg" width="50%">
+          <div class="movie-space">
+            <p>IMDb Rating: 7.0/10</p>
+            <p><a href="https://en.wikipedia.org/wiki/Missing_Link_(2019_film)" target="_blank" class="movie-wiki">Missing Link (2019 film) - Wikipedia</a></p>
+            <p class="movie-space">... and the film before? <a href="https://en.wikipedia.org/wiki/Shazam!_(film)" target="_blank" class="movie-wiki">Shazam!</a></p>
+          </div>
+        </div>
+        <div></div>
       </div>
     </div>
 
     <div id="contact">
       <ul>
-        <li><a href="mailto:andrewjzhen@gmail.com">Email</a></li>
-        <li><a href="assets/resume.pdf">Résumé</a></li>
-        <li><a href="https://www.linkedin.com/in/andrew-zhen/">LinkedIn</a></li>
-        <li><a href="https://github.com/andrewzhen">Github</a></li>
-        <li><a href="https://www.instagram.com/a.jzhen/">Instagram</a></li>
+        <li><a href="mailto:andrewjzhen@gmail.com" id="email" onmouseover="mo('email')" onmouseleave="ml('email')">Email</a></li>
+        <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">Résumé</a></li>
+        <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">LinkedIn</a></li>
+        <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">Github</a></li>
+        <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">Instagram</a></li>
       </ul>
     </div>
 
