--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
   <script src="fadein.js"></script>
 </head>
 
-<body>
+<body id="body">
   <div id="light-bg">
     <div class="content-margins">
       <div id="header">
-        <div id="name-div"><a href="https://ajzhen.com" id="name">Andrew Zhen</a></div>
+        <div id="name-div" class="sink"><a href="https://ajzhen.com" id="name" onmouseover="mo('name')" onmouseleave="ml('name')">Andrew Zhen</a></div>
 
         <div id="nav-div">
-          <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
-          <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
-          <!-- <div id="darkmode" class="nav">Dark Mode
+          <!-- <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div> -->
+          <div class="nav sink"><a href="about.html" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
+          <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
+          
+          <div id="darkmode" class="nav">Dark Mode
             <label class="switch">
-              <input type="checkbox">
+              <input id="checkDark" type="checkbox" onchange="darkmode()">
               <span class="slider round"></span>
             </label>
-          </div> -->
+          </div>
+
         </div>
       </div>
       
@@ -51,48 +54,66 @@
     <div class="wip">Thank you for your patience while the work pages are being developed</div><br><br>
     <div class="grid-container">
       <div class="grid-item">
-        <a href="https://ajzhen.com/caida">
-          <img src="assets/caida/quince.jpg">
-        </a>
-        <p id="title">UX Developer Internship</p>
-        <p id="summary">Summer-long experience at The Center for Applied Internet Data Analysis</p>
+        <div class="grid-content">
+          <a href="https://ajzhen.com/caida">
+            <img src="assets/caida/quince.jpg">
+          </a>
+          <p id="title">UX Developer Internship</p>
+          <p id="summary">Summer-long experience at The Center for Applied Internet Data Analysis</p>
+        </div>
       </div>
       <div class="grid-item grid-item-right">
-        <a href="https://ajzhen.com/snaash">
-          <img src="assets/snaash/thumbnail.png">
-        </a>
-        <p id="title">Snaash iOS App</p>
-        <p id="summary">Advice-giving platform, powered by the wisdom of elders</p>
+        <div class="grid-content">
+          <a href="https://ajzhen.com/snaash">
+            <img src="assets/snaash/thumbnail.png">
+          </a>
+          <p id="title">Snaash iOS App</p>
+          <p id="summary">Advice-giving platform, powered by the wisdom of elders</p>
+        </div>
       </div>
-      <div class="grid-item not-ready"><img src="assets/zilter.jpg">
-        <p id="title">Zilter Web App</p>
-        <p id="summary">Website concept with built-in research done conveniently for you</p>
-      </div>
-      <div class="grid-item grid-item-right not-ready"><img src="assets/quickly.png">
-        <p id="title">Quickly Web App</p>
-        <p id="summary">Class-scheduling tool for UCSD students with punctual intent</p>
-      </div>
-      <div class="grid-item not-ready"><img src="assets/mymoney.png">
-        <p id="title">Finance Python Applet</p>
-        <p id="summary">Simple, yet visually effective finance tracker</p>
+      <div class="grid-item">
+        <div class="grid-content no-transition">
+          <img src="assets/zilter.jpg" class="not-ready">
+          <div class="coming-soon">Coming Soon</div>
+          <p id="title">Zilter Web App</p>
+          <p id="summary">Website concept with built-in research done conveniently for you</p>
+        </div>
       </div>
       <div class="grid-item grid-item-right">
-        <a href="long-term.html">
-          <img src="assets/rocket.gif">
-        </a>
-        <p id="title">Long Term</p>
-        <p id="summary">Collection of personal projects</p>
+        <div class="grid-content no-transition">
+          <img src="assets/quickly.png" class="not-ready">
+          <div class="coming-soon">Coming Soon</div>
+          <p id="title">Quickly Web App</p>
+          <p id="summary">Class-scheduling tool for UCSD students with punctual intent</p>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="grid-content no-transition">
+          <img src="assets/mymoney.png" class="not-ready">
+          <div class="coming-soon">Coming Soon</div>
+          <p id="title">Finance Applet</p>
+          <p id="summary">Simple, yet visually effective money tracker. Programmed in Python.</p>
+        </div>
+      </div>
+      <div class="grid-item grid-item-right">
+        <div class="grid-content">
+          <a href="long-term.html">
+            <img src="assets/rocket.gif">
+          </a>
+          <p id="title">Long Term</p>
+          <p id="summary">Collection of personal projects</p>
+        </div>
       </div>
     </div>
     </section>
 
     <div id="contact">
       <ul>
-        <li><a href="mailto:andrewjzhen@gmail.com">Email</a></li>
-        <li><a href="assets/resume.pdf">Résumé</a></li>
-        <li><a href="https://www.linkedin.com/in/andrew-zhen/">LinkedIn</a></li>
-        <li><a href="https://github.com/andrewzhen">Github</a></li>
-        <li><a href="https://www.instagram.com/a.jzhen/">Instagram</a></li>
+        <li><a href="mailto:andrewjzhen@gmail.com" id="email" onmouseover="mo('email')" onmouseleave="ml('email')">Email</a></li>
+        <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">Résumé</a></li>
+        <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">LinkedIn</a></li>
+        <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">Github</a></li>
+        <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">Instagram</a></li>
       </ul>
     </div>
 
