--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div id="name-div" class="sink"><a href="https://ajzhen.com" id="name" onmouseover="mo('name')" onmouseleave="ml('name')">Andrew Zhen</a></div>
 
         <div id="nav-div">
-          <!-- <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div> -->
-          <div class="nav sink"><a href="about.html" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
+          <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
+          <!-- <div class="nav sink"><a href="about.html" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div> -->
           <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
           
           <div id="darkmode" class="nav">Dark Mode
@@ -109,7 +109,7 @@
 
     <div id="contact">
       <ul>
-        <li><a href="mailto:andrewjzhen@gmail.com" id="email" onmouseover="mo('email')" onmouseleave="ml('email')">Email</a></li>
+        <li><span id="email" onmouseover="mo('email')" onmouseleave="ml('email')">Email</span></li>
         <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">Résumé</a></li>
         <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">LinkedIn</a></li>
         <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">Github</a></li>
@@ -117,7 +117,7 @@
       </ul>
     </div>
 
-    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
+    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p><p id="note">Built from the ground up</p></div>
   </div>
 
   <script src="script.js" type="text/javascript"></script>
