optimize images and update work banners

--- a/about.html
+++ b/about.html
@@ -37,13 +37,13 @@
     </div>
 
     <div>
-      <div class="aboutPic"><img src="assets/portrait.png"></div>
+      <div class="aboutPic"><img src="assets/portrait.jpg"></div>
 
       <div class="aboutArea">
         <div>
           <p class="aboutHeader">Biography</p>
           <p>Hey! I’m a third year undergraduate student studying Cognitive 
-             Science (Design/Interaction concentration) at UC San Diego 🔱. 
+             Science (Design / Interaction concentration) at UC San Diego 🔱. 
              <br/> <br/> Right now, I’m actively applying for UX Engineer and 
              Designer intern positions for Summer '19.</p>
           <br><br>
