--- a/caida.html
+++ b/caida.html
@@ -94,7 +94,7 @@
            glance, the consent form is an organized, interactive element that 
            informs participants.</p>
       </div>
-      <div class="grid"><img src="assets/caida/quince1.jpg"></div>
+      <div class="grid"><img src="assets/caida/quince-consent-form.jpg"></div>
     </div>
 
     <div class="impact-container">
@@ -107,7 +107,7 @@
              was replaced by a more appropriate sized one and the Continue button 
              was adjusted to sit flush with the edges of the modal window.</p>
         </div>
-        <div class="grid"><img src="assets/caida/quince2.jpg"></div>
+        <div class="grid"><img src="assets/caida/quince-tutorial.jpg"></div>
     </div>
 
     <div class="impact-container">
@@ -119,7 +119,7 @@
            green to symbolize the currency that participants may earn through 
            the web platform. Lastly, I employed adequate negative spacing and contrast.</p>
       </div>
-      <div class="grid"><img src="assets/caida/quince3.jpg"></div>
+      <div class="grid"><img src="assets/caida/quince-signin.jpg"></div>
     </div>
 
     <div class="impact-container">
@@ -132,7 +132,7 @@
            locations. Notice, there is also a home button for those who get 
            carried away.</p>
       </div>
-      <div class="grid"><img src="assets/caida/quince4.png"></div>
+      <div class="grid"><img src="assets/caida/quince-map.jpg"></div>
     </div>
 
     <div class="conclusion-container">
@@ -148,16 +148,16 @@
           made it all worth the hassle. Working closely with researchers in 
           CAIDA and getting valuable experience working with the collected 
           datasets was a privilege. Working in teams definitely helped advance 
-          my design and interpersonal skills because there always exists the 
-          opportunity to receive feedback on your high-fidelity work or mere 
-          conceptual ideas. <br/> <br/>
+          my design and interpersonal skills because of the opportunities to 
+          receive feedback on my work ranging from mere conceptual ideas to 
+          high-fidelity quality. <br/> <br/>
 
           Thank you to Ricky for the mentorship and guidance and to Jennifer 
           for the awesome collaboration.</p>
       </div>
     </div>
 
-    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
+    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p><p id="note">Built from the ground up</p></div>
   </div>
 </body>
 </html>
