--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       
       <p id="description" class="hvr-bob">UX Engineer + Designer</p>
-      <p id="description-2" class="hvr-bob">Currently a Design + Interaction Student at UC San Diego</p>
+      <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p>
 
       <p id="home-location">Mt Woodson Summit, San Diego</p>
     </div>
@@ -51,60 +51,60 @@
 
   <div class="content">
     <section>
-    <div class="wip">Thank you for your patience while the work pages are being developed</div><br><br>
-    <div class="grid-container">
-      <div class="grid-item">
-        <div class="grid-content">
-          <a href="https://ajzhen.com/caida">
-            <img src="assets/caida/quince.jpg">
-          </a>
-          <p id="title">UX Developer Internship</p>
-          <p id="summary">Summer-long experience at The Center for Applied Internet Data Analysis</p>
+      <div class="wip">Thank you for your patience while the work pages are being developed</div><br><br>
+      <div class="grid-container">
+        <div class="grid-item">
+          <div class="grid-content">
+            <a href="https://ajzhen.com/caida">
+              <img src="assets/caida/thumbnail.jpg">
+            </a>
+            <p id="title">UX Developer Internship</p>
+            <p id="summary">Summer-long experience at The Center for Applied Internet Data Analysis</p>
+          </div>
+        </div>
+        <div class="grid-item grid-item-right">
+          <div class="grid-content">
+            <a href="https://ajzhen.com/snaash">
+              <img src="assets/snaash/thumbnail.jpg">
+            </a>
+            <p id="title">Snaash iOS App</p>
+            <p id="summary">Advice-giving platform, powered by the wisdom of elders</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-content no-transition">
+            <img src="assets/zilter/thumbnail.jpg" class="not-ready">
+            <div class="coming-soon">Coming Soon</div>
+            <p id="title">Zilter Web App</p>
+            <p id="summary">Website concept with built-in research done conveniently for you</p>
+          </div>
+        </div>
+        <div class="grid-item grid-item-right">
+          <div class="grid-content no-transition">
+            <img src="assets/quickly/thumbnail.jpg" class="not-ready">
+            <div class="coming-soon">Coming Soon</div>
+            <p id="title">Quickly Web App</p>
+            <p id="summary">Class-scheduling tool for UCSD students with punctual intent</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-content no-transition">
+            <img src="assets/mymoney/thumbnail.jpg" class="not-ready">
+            <div class="coming-soon">Coming Soon</div>
+            <p id="title">Finance Applet</p>
+            <p id="summary">Simple, yet visually effective money tracker. Programmed in Python.</p>
+          </div>
+        </div>
+        <div class="grid-item grid-item-right">
+          <div class="grid-content">
+            <a href="long-term.html">
+              <img src="assets/long-term/thumbnail.gif">
+            </a>
+            <p id="title">Long Term</p>
+            <p id="summary">Collection of personal projects</p>
+          </div>
         </div>
       </div>
-      <div class="grid-item grid-item-right">
-        <div class="grid-content">
-          <a href="https://ajzhen.com/snaash">
-            <img src="assets/snaash/thumbnail.png">
-          </a>
-          <p id="title">Snaash iOS App</p>
-          <p id="summary">Advice-giving platform, powered by the wisdom of elders</p>
-        </div>
-      </div>
-      <div class="grid-item">
-        <div class="grid-content no-transition">
-          <img src="assets/zilter.jpg" class="not-ready">
-          <div class="coming-soon">Coming Soon</div>
-          <p id="title">Zilter Web App</p>
-          <p id="summary">Website concept with built-in research done conveniently for you</p>
-        </div>
-      </div>
-      <div class="grid-item grid-item-right">
-        <div class="grid-content no-transition">
-          <img src="assets/quickly.png" class="not-ready">
-          <div class="coming-soon">Coming Soon</div>
-          <p id="title">Quickly Web App</p>
-          <p id="summary">Class-scheduling tool for UCSD students with punctual intent</p>
-        </div>
-      </div>
-      <div class="grid-item">
-        <div class="grid-content no-transition">
-          <img src="assets/mymoney.png" class="not-ready">
-          <div class="coming-soon">Coming Soon</div>
-          <p id="title">Finance Applet</p>
-          <p id="summary">Simple, yet visually effective money tracker. Programmed in Python.</p>
-        </div>
-      </div>
-      <div class="grid-item grid-item-right">
-        <div class="grid-content">
-          <a href="long-term.html">
-            <img src="assets/rocket.gif">
-          </a>
-          <p id="title">Long Term</p>
-          <p id="summary">Collection of personal projects</p>
-        </div>
-      </div>
-    </div>
     </section>
 
     <div id="contact">
