--- a/long-term.html
+++ b/long-term.html
@@ -6,7 +6,7 @@
   </script>
   <title>Long Term</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
-  <link rel="stylesheet" type="text/css" href="style/longTermStyle.css">
+  <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
 <body>
@@ -26,11 +26,21 @@
       </div>
     </div>
 
-    <div class="work-banner">
-      <span class="work-title">Long Term</span>
+    <div class="longterm-banner banner">
+      <div id="valign-div">
+        <div class="heading-container">
+          <div>
+            <div>
+              <p class="work-title longterm-title">Long Term</p>
+              <p class="longterm-description">A collection of my personal projects</p>
+            </div>
+            <div></div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="body-container">
+    <div class="body-container-longterm">
       <div class="grid">
         <div class="project-info">
           <p class="project-header">Rocket Countdown</p>
@@ -47,7 +57,7 @@
       <div class="grid"><img src="assets/long-term/rocket.gif"></div>
     </div>
 
-    <div class="body-container">
+    <div class="body-container-longterm">
       <div class="grid">
         <div class="project-info">
           <p class="project-header">Smile</p>
@@ -63,7 +73,7 @@
       <div class="grid" style="margin-bottom: 10vw"><img src="assets/long-term/smile.gif"></div>
     </div>
 
-    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
+    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p><p id="note">Built from the ground up</p></div>
   </div>
 </body>
 </html>
