--- a/snaash.html
+++ b/snaash.html
@@ -110,7 +110,7 @@
 
     <div class="body-container">
       <div></div>
-      <div><img src="assets/snaash/search-results.png"></div>
+      <div><img src="assets/snaash/search-results.jpg"></div>
     </div>
 
     <div class="body-container">
@@ -152,7 +152,7 @@
 
     <div class="body-container">
       <div></div>
-      <div><img src="assets/snaash/app-flow.png"></div>
+      <div><img src="assets/snaash/app-flow.jpg"></div>
     </div>
 
     <div class="body-container">
@@ -311,7 +311,7 @@
 
     <div class="body-container">
       <div></div>
-      <div><img src="assets/snaash/competitive-analysis.png"></div>
+      <div><img src="assets/snaash/competitive-analysis.jpg"></div>
     </div>
 
     <div class="body-container">
@@ -344,7 +344,7 @@
            between altruistic users focused on giving back to each other.</p>
       </div>
       <div></div>
-      <p><br/><img src="assets/snaash/fortune-cookie.jpg" width="50%"></p>
+      <p><br/><img src="assets/snaash/fortune-cookie.png" width="50%"></p>
       <div></div>
       <p class="subheader">A fitting fortune cookie message that I personally received</p>
     </div>
@@ -360,7 +360,7 @@
       </div>
     </div>
 
-    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
+    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p><p id="note">Built from the ground up</p></div>
   </div>
 </body>
 </html>
