--- a/zilter.html
+++ b/zilter.html
@@ -25,6 +25,8 @@
         </div> -->
       </div>
     </div>
+
+    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p><p id="note">Built from the ground up</p></div>
   </div>
 </body>
 </html>
